--- a/src/components/cardStyle.css
+++ b/src/components/cardStyle.css
@@ -8,8 +8,8 @@
     align-items: center;
   }
 
-  .swiper_container {
-    width: 90%;
+  .swiper-container {
+    width: 100%;
     height: auto;
   }
 
