--- a/src/components/form.css
+++ b/src/components/form.css
@@ -45,3 +45,26 @@
     transition: 0.2s ease-in-out;
     font-weight: bolder;
 }
+
+@media screen and (min-width:360px) and (max-width: 430px) {
+    .form-form{
+        width: 70%;
+        font-size: 16px;
+        margin: 0;
+        padding: 20px 40px 20px 40px;
+    }
+
+    .item{
+        width: 100%;
+        height: 25px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .item-message{
+        width: 100%;
+        height: 50px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
