--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,16 +1,40 @@
 .nav-menu nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 80px;
-    padding-right: 40px;
+    display: grid;
+    grid-template-columns: 50% 50%;
     font-family: quicksand;
     letter-spacing: 1.1px;
     background-color: whitesmoke;
     height: 60px;
-    background: linear-gradient(to top, black, rgb(110, 110, 110));
+    background: linear-gradient(to top, black, #999999);
     color: whitesmoke;
     border-bottom: 0.5px solid white;
+  }
+
+  .nav-icons{
+    grid-column: 1;
+    display:flex;
+    align-items: center;
+    justify-self: flex-start;
+    gap: 20px;
+    margin: 0;
+    padding-left: 60px;
+  }
+
+  .nav-icons img{
+    width: 30px;
+    height: 30px;
+  }
+
+  .nav-list{
+    grid-column: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    list-style: none;
+    gap: 40px;
+    margin: 0;
+    padding-right: 60px;
+    padding-bottom: 10px;
   }
 
   .nav-item:hover{
