--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -144,7 +144,8 @@ a:hover{
     .proj-section{
         padding-bottom: 40px;
     }
-
+    .peter,
+    .mia,
     .thiago,
     .tour,
     .cafe,
