--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -148,7 +148,7 @@
 
 /* -------------------- RESPONSIVE -------------------- */
 
-@media screen and (min-width:360px) and (max-width: 820px) {
+@media screen and (min-width:360px) and (max-width: 1100px) {
     /* .about-section{
         background-color: black;
         color: whitesmoke;
@@ -157,6 +157,11 @@
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 100vh;
     } */
+
+    .body{
+        overflow-x: hidden;
+    }
+
     .about-section{
         display: flex;
         flex-direction: column;
