--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -119,7 +119,11 @@ a:hover{
 
 /* -------------------- RESPONSIVE -------------------- */
 
-@media screen and (min-width:360px) and (max-width: 860px) {
+@media screen and (min-width:360px) and (max-width: 1100px) {
+
+    .body{
+        overflow-x: hidden;
+    }
 
     .proj-section{
         padding-bottom: 40px;
@@ -140,6 +144,10 @@ a:hover{
 }
 
 @media screen and (min-width:360px) and (max-width: 430px) {
+
+    .body{
+        overflow-x: hidden;
+    }
 
     .proj-section{
         padding-bottom: 40px;
